--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+    "node": "14.x"},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ronny26/kanbas-node-server-app.git"
